# file-chunker

./: CMakeLists.txt  main.cpp  vcpkg.json
include/: chunk.hpp  chunk_config.hpp  chunk_reference_manager.hpp  cid_utility.hpp  file_manager.hpp  file_metadata.hpp  thread_pool.hpp
src/: chunk.cpp  chunk_config.cpp  chunk_reference_manager.cpp  cid_utility.cpp  file_manager.cpp  file_metadata.cpp  thread_pool.cpp
